<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_outline_home"
        android:title="@string/section_home" />
    <item
        android:id="@+id/nav_learn"
        android:icon="@drawable/ic_school"
        android:title="@string/section_learn" />
    <item
        android:id="@+id/nav_progress"
        android:icon="@drawable/ic_trending_up"
        android:title="@string/section_progress" />
    <item
        android:id="@+id/nav_tutor"
        android:icon="@drawable/ic_chat"
        android:title="@string/section_tutor" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/section_profile" />
</menu>
